Bug fixes and code updates on 25-Oct
