# app/Models/User.php
@@ -7,6 +7,8 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
+use App\Services\AdService;
+use Illuminate\Support\Facades\Log;
 
 class User extends Authenticatable
 {
@@ -20,8 +22,9 @@ class User extends Authenticatable
     protected $fillable = [
         'name',
         'email',
-        'username', // We will use this to store the sAMAccountName
         'password',
+        'hasGeneralAccess',
+        'hasHighPrivilegeAccess',
     ];
 
     /**
@@ -42,5 +45,6 @@ class User extends Authenticatable
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
+
 }
 
